# img-search-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/img_search/: __init__.py  settings.py  types.py
src/img_search/api/: __main__.py  app.py  utils.py
src/img_search/api/routers/: __init__.py  images.py
src/img_search/utils/: __init__.py  bpe_data.py
